CI: fix build-mac

--- a/.github/workflows/cmake_builds.yml
+++ b/.github/workflows/cmake_builds.yml
@@ -586,7 +586,7 @@ jobs:
         brew update
         brew outdated
         brew unlink python
-        brew install --overwrite python@3.10 python@3.11
+        brew install --overwrite python@3.12
         brew install postgresql || brew link postgresql
         brew install pkg-config freexl libxml2 libspatialite geos proj libgeotiff openjpeg giflib libaec postgis poppler doxygen unixodbc jpeg-turbo aom jpeg-xl libheif libarchive libkml boost
         brew install ccache swig
