--- a/.github/workflows/cmake_builds.yml
+++ b/.github/workflows/cmake_builds.yml
@@ -554,7 +554,8 @@ jobs:
       run: cat $GITHUB_WORKSPACE/build/gdal.pc
 
   build-mac:
-    runs-on: macOS-latest
+    # M1 MacOS runner: https://github.blog/changelog/2024-01-30-github-actions-introducing-the-new-m1-macos-runner-available-to-open-source/
+    runs-on: macOS-14
     env:
       # Disable Arrow/Parquet because the VM provides libraries in /usr/local/lib/
       # that cause Illegal instruction error when running tests. I suspect the
@@ -567,7 +568,7 @@ jobs:
     - name: Setup xcode
       uses: maxim-lobanov/setup-xcode@60606e260d2fc5762a71e64e74b2174e8ea3c8bd # v1.6.0
       with:
-        xcode-version: 14.2
+        xcode-version: 14.3
     - name: Checkout GDAL
       uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
     - name: Setup cache
