--- a/.github/workflows/cifuzz.yml
+++ b/.github/workflows/cifuzz.yml
@@ -15,6 +15,7 @@ permissions:
 jobs:
   Fuzzing:
     runs-on: ubuntu-latest
+    if: github.repository == 'OSGeo/gdal'
     steps:
     - name: Build Fuzzers
       id: build
