--- a/ogr/ogrsf_frmts/miramon/CMakeLists.txt
+++ b/ogr/ogrsf_frmts/miramon/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_gdal_driver(
   TARGET ogr_MiraMon
   SOURCES ogrmiramondatasource.cpp ogrmiramondriver.cpp ogrmiramonlayer.cpp mm_wrlayr.c mm_gdal_functions.c mm_rdlayr.c
-  BUILTIN)
+  PLUGIN_CAPABLE)
 gdal_standard_includes(ogr_MiraMon)
 target_include_directories(ogr_MiraMon PRIVATE $<TARGET_PROPERTY:ogrsf_generic,SOURCE_DIR>)
 
