--- a/.github/workflows/coverity_scan.yml
+++ b/.github/workflows/coverity_scan.yml
@@ -2,10 +2,6 @@ name: coverity-scan
 
 # Controls when the action will run.
 on:
-  # Run this action on a schedule (we're allowed a maximum of two per day)
-  #schedule:
-  #  - cron: '0 18 * * SUN' # Sunday at 18:00 UTC
-
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -16,7 +12,7 @@ jobs:
 
   coverity_scan:
     runs-on: ubuntu-latest
-    if: github.repository == 'OSGeo/gdal'
+    if: github.repository == 'rouault/gdal'
 
     strategy:
       fail-fast: false
