--- a/.github/workflows/code_checks.yml
+++ b/.github/workflows/code_checks.yml
@@ -87,14 +87,10 @@ jobs:
 
   doxygen:
     runs-on: ubuntu-latest
+    container: ghcr.io/osgeo/proj-docs
     steps:
       - name: Checkout
         uses: actions/checkout@0ad4b8fadaa221de15dcec353f45205ec38ea70b # v4.1.4
-
-      - name: Install Requirements
-        run: |
-            sudo apt update
-            sudo apt install doxygen texlive-latex-base
 
       - name: Run doxygen
         run: |
